#110 UI and UX redesign: small rows and big rows - CSS refactored into display-flex (fixing ugly long text wrappings, replaced with ellipsis), removed some obsolete info, location icon is shown always when coordinates are available, big rows are 1em bigger, overall CSS simplification

--- a/src/webserver/private/less/structure.less
+++ b/src/webserver/private/less/structure.less
@@ -84,7 +84,6 @@
 			}
 
 			.size,
-			.resolution,
 			.location,
 			.distance,
 			.created {
@@ -166,19 +165,33 @@
 
 	&.rows-small .structure-item,
 	&.rows-big .structure-item {
-		display: block;
+
+		// Item, that is visible on rightmost, should have this padding
+		@structure-item-padding-right-screen: 0.5em;
+
+		display: flex;
+		align-items: center;
 		padding: 0.2em;
+		overflow: hidden;
+		justify-content: space-between;
 
 		&:nth-of-type(odd) {
 			background-color: rgba(@theme-background-color-secondary, 0.3);
 		}
 
 		.icon,
-		.resolution,
 		.size,
 		.distance,
 		.created {
 			color: @theme-color-text;
+			white-space: nowrap;
+		}
+
+		.name {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			margin-right: auto;
 		}
 
 		.location:hover {
@@ -194,46 +207,48 @@
 		&:hover:not(.structure-selected) {
 			background-color: rgba(@theme-background-color-secondary, 0.5);
 		}
+
+		@media (min-width: 768px) {
+			.size,
+			.location,
+			.distance,
+			.created {
+				margin-left: 1em;
+			}
+			.created {
+				padding-right: @structure-item-padding-right-screen;
+			}
+
+			.size {
+				width: 5em;
+				text-align: right;
+			}
+		}
+
+		@media (max-width: 767px) {
+			.size,
+			.created {
+				display: none;
+			}
+			.location {
+				padding-right: @structure-item-padding-right-screen;
+			}
+		}
 	}
 
 	/* Rows (small) */
 
 	&.rows-small {
 		.structure-item {
+			.name {
+				padding-left: 0.5em;
+			}
 			.thumbnail {
 				display: none;
 			}
 
 			.thumbnail-loading-icon {
 				display: none;
-			}
-
-			/* Sadly, it's not possible to show this info on smaller displays, it completely break row expanding text height to another lines below */
-			@media (max-width: 767px) {
-				.size,
-				.resolution,
-				.location,
-				.distance,
-				.created {
-					display: none;
-				}
-			}
-
-			@media (min-width: 768px) {
-				.size,
-				.resolution,
-				.location,
-				.distance,
-				.created {
-					float: right;
-					display: block;
-					padding-right: 1em;
-				}
-
-				.size {
-					width: 7em;
-					text-align: right;
-				}
 			}
 		}
 	}
@@ -242,87 +257,29 @@
 
 	&.rows-big {
 		.structure-item {
-			position: relative;
 			padding: 0;
-			height: 4em;
-
-			.name,
-			.icon,
-			.thumbnail-loading-icon {
-				position: absolute;
-				display: block;
-			}
+			height: 5em;
 
 			.name {
-				padding-left: 4.5em;
-				padding-top: 1em;
+				padding-left: 3em;
 			}
 
 			.icon {
-				font-size: 1.25em;
-				left: 1em;
-				top: 1em;
+				font-size: 2em;
+				padding-left: 1em;
 			}
 
 			.thumbnail-loading-icon {
-				font-size: 0.75em;
-				//left: 4em; // Align to the right of thumbnail
-				left: 0.5em; // Align to the left of thumbnail
-				top: 0.5em;
+				position: absolute;
+				font-size: 1em;
+				left: 0.5em; // Align to the left of thumbnail icon
+				padding: 0;
 			}
 
 			.thumbnail {
-				height: 4em;
-				width: 4em;
+				height: 5em;
+				width: 5em;
 				position: absolute;
-			}
-
-			/* On bigger displays show these informatins on one line */
-			@media (min-width: 992px) {
-				.created,
-				.size,
-				.location,
-				.distance,
-				.resolution {
-					float: right;
-					display: block;
-					padding-right: 1em;
-					padding-top: 1.25em;
-				}
-			}
-
-			/* On smaller displays show each of these informations on separate line */
-			@media (max-width: 991px) {
-				.created,
-				.size,
-				.distance,
-				.location,
-				.resolution {
-					position: absolute;
-					right: 0;
-				}
-
-				.created {
-					top: 0;
-				}
-
-				.size {
-					top: 1.25em;
-				}
-
-				.location {
-					top: 1.25em;
-					right: 5em;
-				}
-
-				.resolution {
-					top: 2.5em;
-				}
-
-				.distance {
-					right: 5em;
-					top: 2.5em;
-				}
 			}
 		}
 	}
